Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2826

SPDY implementation does not support OPTIONS and TRACE methods

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 5.0.0
    • SPDY

    Description

      SPDY implementation currently only supports the below methods. Need to add OPTIONS and TRACE methods to it.

      if (req->method == "GET")
          spdy_fetcher_launch(req, TS_FETCH_METHOD_GET);
        else if (req->method == "POST")
          spdy_fetcher_launch(req, TS_FETCH_METHOD_POST);
        else if (req->method == "PURGE")
          spdy_fetcher_launch(req, TS_FETCH_METHOD_PURGE);
        else if (req->method == "PUT")
          spdy_fetcher_launch(req, TS_FETCH_METHOD_PUT);
        else if (req->method == "HEAD")
          spdy_fetcher_launch(req, TS_FETCH_METHOD_HEAD);
        else if (req->method == "CONNECT")
          spdy_fetcher_launch(req, TS_FETCH_METHOD_CONNECT);
        else if (req->method == "DELETE")
          spdy_fetcher_launch(req, TS_FETCH_METHOD_DELETE);
        else if (req->method == "LAST")
          spdy_fetcher_launch(req, TS_FETCH_METHOD_LAST);
        else
          spdy_prepare_status_response(sm, req->stream_id, STATUS_405);
      

      Attachments

        1. ts2826.diff
          1 kB
          Sudheer Vinukonda

        Activity

          People

            bcall Bryan Call
            sudheerv Sudheer Vinukonda
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: