TS-2826: SPDY implementation does not support OPTIONS and TRACE methods