proxy/spdy/SpdyCallbacks.cc
@@ -309,6 +309,10 @@ spdy_process_syn_stream_frame(SpdyClientSession *sm, SpdyRequest *req)
     spdy_fetcher_launch(req, TS_FETCH_METHOD_CONNECT);
   else if (req->method == "DELETE")
     spdy_fetcher_launch(req, TS_FETCH_METHOD_DELETE);
+  else if (req->method == "OPTIONS")
+    spdy_fetcher_launch(req, TS_FETCH_METHOD_OPTIONS);
+  else if (req->method == "TRACE")
+    spdy_fetcher_launch(req, TS_FETCH_METHOD_TRACE);
   else if (req->method == "LAST")
     spdy_fetcher_launch(req, TS_FETCH_METHOD_LAST);
   else
